--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,23 +1,36 @@
 name: Build
 on:
-  push:
-    branches:
-      - mymy1
+  pull_request:
+    types: [opened]
+#   push:
+#     branches:
+#       - mymy1
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+#       - uses: actions/checkout@v2
+#         with:
+#           fetch-depth: 0
+#       - uses: sonarsource/sonarqube-scan-action@master
+#         env:
+#           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+#           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
       # If you wish to fail your job when the Quality Gate is red, uncomment the
       # following lines. This would typically be used to fail a deployment.
       # - uses: sonarsource/sonarqube-quality-gate-action@master
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Hello world action step
+        id: hello
+        uses: juyoung-go/action-pr-comment-sonarqube@main
+        with:
+          sonar.projectKey: '나는 프로젝트키다'
+          sonar.host.url: 'ㄴㄴㄴㄴㄴ'
+          sonar.login: 'goju2k22'
+          github.token: ${{secrets.GITHUB_TOKEN}}
+      # Use the output from the `hello` step
+      - name: Get the output time
+        run: echo "The time was ${{ steps.hello.outputs.comment }}"
