--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,10 @@
 name: Build
 on:
-  push:
-    branches:
-      - mymy1
+  pull_request:
+    types: [opened]
+#   push:
+#     branches:
+#       - mymy1
 jobs:
   build:
     name: Build
@@ -21,3 +23,14 @@ jobs:
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Hello world action step
+        id: hello
+        uses: juyoung-go/action-pr-comment-sonarqube@main
+        with:
+          sonar.projectKey: '나는 프로젝트키다'
+          sonar.host.url: 'ㄴㄴㄴㄴㄴ'
+          sonar.login: 'goju2k22'
+          github.token: ${{secrets.GITHUB_TOKEN}}
+      # Use the output from the `hello` step
+      - name: Get the output time
+        run: echo "The time was ${{ steps.hello.outputs.comment }}"
