--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       #   timeout-minutes: 5
       #   env:
       #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      - name: Hello world action step
+      - name: pr comment with check result
         id: hello
         uses: juyoung-go/action-pr-comment-sonarqube@main
         with:
