--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,9 @@ jobs:
           sonar.projectKey: 'dashboard-player'
           sonar.host.url: ${{ secrets.SONAR_HOST_URL }}
           sonar.login: ${{ secrets.SONAR_TOKEN }}
+          sonar.metric: 'bugs'
           github.token: ${{ secrets.GITHUB_TOKEN }}
+          errorOnFail: 'false'
       # Use the output from the `hello` step
       - name: Get the output time
         run: echo "The time was ${{ steps.hello.outputs.comment }}"
